external-crates/move/crates/move-compiler/tests/development/signed_ints/valid/signed_int_constant_fold.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:41:21
   │
41 │     const ADD_I256: i256 = 10i256 + 20i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:42:21
   │
42 │     const SUB_I256: i256 = 50i256 - 30i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:43:21
   │
43 │     const MUL_I256: i256 = 6i256 * 7i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:44:21
   │
44 │     const DIV_I256: i256 = 100i256 / 10i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:45:21
   │
45 │     const MOD_I256: i256 = 10i256 % 3i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:46:21
   │
46 │     const NEG_I256: i256 = -(42i256);
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:48:22
   │
48 │     const BAND_I256: i256 = 0x0Fi256 & 0x03i256;
   │                      ^^^^
   │                      │
   │                      Unpermitted constant type
   │                      Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:49:21
   │
49 │     const BOR_I256: i256 = 0x0Fi256 | 0x30i256;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:50:22
   │
50 │     const BXOR_I256: i256 = 0x0Fi256 ^ 0x03i256;
   │                      ^^^^
   │                      │
   │                      Unpermitted constant type
   │                      Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:51:21
   │
51 │     const SHL_I256: i256 = 1i256 << 8u8;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:52:21
   │
52 │     const SHR_I256: i256 = 256i256 >> 4u8;
   │                     ^^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'

error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constant_fold.move:53:22
   │
53 │     const CAST_I256: i256 = (1i8 as i256);
   │                      ^^^^
   │                      │
   │                      Unpermitted constant type
   │                      Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'
